bug fix and swagger add
